text alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,6 @@
 .btn-search:hover {
     background-color: #ff8080;
     box-shadow: none;
-    color: black;
     transition: 1s;
 }
 
@@ -50,31 +49,34 @@
 }
 
 .btn:hover {
-    background-color:  #ffffb3;
+    background-color: #ffffb3;
     box-shadow: none;
     transition: 1s;
 }
 
-.text {
-    font-size: 28px;
-    margin-left: 350px;
+.text-1{
+    display: block;
+    margin-left: 37%;
+    font-size: 25px;
 }
 
-.text-1 {
-    font-size: 28px;
-    font-weight: bold;
-    margin-left: 290px;
+.text-2{
+    display: block;
+    margin-left: 33%;
+    font-size: 25px;
+ 
 }
 
 .product-container {
     display: block;
-    margin-left: 90px;
+    margin: 10px auto;
+    background-color: #efeff5;
 }
 
 .dishes {
     height: 150px;
     width: 150px;
-    padding: 33px;
+    padding: 30px;
     border-radius: 100px;
 }
 
@@ -93,7 +95,6 @@
 
 .order-options:hover {
     background-color: #ff8080;
-    color: black;
     transition: 0.8s;
     box-shadow: none;
 }
